@@ -1,3 +1,4 @@
+* BUG#9347 Properly use job_size in payment succeed batch
 * BUG#9413 Properly calculate payment kind from move lines when creating payments
 * BUG#9329 Add authorization to party.party.payment_direct_debit
 * FEA#9189 Allow to mix positive and negative move lines when creating payments
